--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,9 +48,49 @@ h1 {
     letter-spacing: 1px;
 }
 
+#menu {
+    list-style-type: none;
+    font-size: 120%;
+    letter-spacing: 4px;
+    color: rgba(76, 72, 72, .8);
+}
+
+.active {
+    border-bottom: 1px solid rgba(58, 56, 56, 0.8);
+}
+
+/* Navbar with dropdown toggle */
+
+nav {
+    position: absolute;
+    box-shadow: inset 0 -1em 2em #F5CBA7,
+        0 0 0 2px #FDF2E9,
+        0.3em 0.3em 1em #FAE5D3;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    display: none;
+    top: 100%;
+}
+
+/* Nav toggle */
+
+#nav-toggle:checked~nav {
+    display: block;
+    background-color: #FDF2E9;
+    line-height: 2;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.dropdown-menu {
+    font-size: 2rem;
+}
 /* Main content */
 main {
-    background-color: #FAE5D3;
+    background-color: #37ba29;
 }
 
 /* Footer */
