--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,9 +128,16 @@ main {
 #email {
     width: 200px;
     height: 30px;
-    border: #a08c7a; solid 1px;
+    border: #a08c7a solid 1px;
     background-color: #FAE5D3;
     border-radius: 4px; 
     font-size: 16px;
     text-align: center;
+}
+
+.button {
+    background-color: rgb(76, 72, 72);
+    color: #FDF2E9;
+    padding: 5px 10px;
+    border-radius: 4px;
 }
