Create a class for hidden-heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,11 @@ main {
     margin-top: 81px;
 }
 
+/* Hidden heading in the page */
+.hidden-heading {
+    display: none;
+}
+
 /* Footer */
 
 .box5 {
