--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,17 @@ h5 {
     margin: 5px;
     border-radius: 15px;
 }
+
+/* Moment section */
+
+.box4 {
+    box-shadow: 0 -1em 2em #fad0a5,
+    0 0 0 1px rgb(243, 194, 145, .5),
+    inset 0.2em 0.2em 2em #f7d4b0;;
+    padding: 20px 20px;
+    border-radius: 50%;
+    margin: 10px;
+}
 /* Footer */
 
 .box5 {
