Styled the last on main to look good in small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,16 @@ h5 {
 }
 
 /* Offer section */
+h4 {
+    text-align: center;
+}
+
+#offer {
+    font-size: 120%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 #box {
     text-align: center;
 }
